# sugo

./: README.md  pyproject.toml  start.command
docs/superpowers/plans/: 2026-03-15-sugo-transcriber.md  2026-03-15-v1.1-options-shutdown.md
docs/superpowers/specs/: 2026-03-15-sugo-transcriber-design.md  2026-03-15-v1.1-options-shutdown-design.md
src/transcriber/: app.py  transcribe.py
src/transcriber/static/: index.html
tests/: test_app.py  test_transcribe.py
